SonarLit tool changes made used lambda expressions